styles.css
* {
    margin: 0;
    padding: 0;
}

.container {
    display: grid;
    grid-template-columns: 20% 80%;
}

/* Navbar */

.sidebar {
    background-color: black;
    height: 100vh;
    color: white;
    width: 20rem;
}

.logo-text {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 40px 40px;
}

.list-bottom {
    margin-top: 50px;
}

.icon-text {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin: 10px 40px;
}

.icon-text p {
    margin-left: 20px;
    font-size: 20px;
    font-weight: 700;
}

li {
    list-style-type: none;
}

/* Main content */

.main {
    display: grid;
    height: 100vh;
    color: black;
    grid-template-rows: 30% 80%;
}

.header {
    background-color: rgb(209, 42, 128);
    display: flex;
    flex-direction: column;
}

.navbar, .welcome, .left {
    display: flex;
    flex-direction: row;
    align-items: center;
    font-size: 30px;
    margin: 10px 20px;
}

.form-input {
    width: 600px;
    height: 20px;
    background-color: lightgray;
    border-radius: 15px;
    border: 1px solid lightgray;
    margin-left: 20px;
    margin-right: 300px;
}

.profile, .profile-pic {
    border-radius: 20px;
    margin: 0 20px;
}

.welcome {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin: 5px 20px;
}

.right {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    width: 30%;
}

.btn {
    background-color: lightgray;
    width: 70px;
    height: 35px;
    color: black;
    border: 1px solid lightgray;
    border-radius: 20px;
    margin-right: 30px;
}

.content {
    background-color: blue;
    display: grid;
    grid-template-columns: 60% 40%;
}


.cards {
    display: grid;
    grid-template-columns: 50% 50%;
}

.card {
    background-color: white;
    border-left: 4px solid #facc15;
    border-radius: 10px;
    width: 80%;
    margin: 30px 0;
    margin-left: 20px;
    padding: 25px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding-left: 10px;
}

.icons {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    width: 90%;
    margin-top: 15px;
}

h6 {
    font-size: 18px;
}

.card p {
    font-size: 14px;
    margin: 10px 0;
}

h4 {
    margin-left: 25px;
    margin-top: 20px;
    font-size: 25px;
}

/* Trending/Announcements */

